--- a/src/assets/styles/views/_home.scss
+++ b/src/assets/styles/views/_home.scss
@@ -58,7 +58,6 @@
     width: 100vw;
     height: 100vh;
     opacity: 0;
-    background-image: url('../../img/basket/BackgroundBasket.png');
     background-size: 100vw 100vh;
     transition: opacity 0.3s ease;
     // animation: sweep linear 4s forwards;
@@ -68,15 +67,33 @@
       width: 100%;
     }
   }
-
-  &__title {
-    font-size: 48px;
-    letter-spacing: 2px;
-    font-weight: 700;
-    margin-top: 9vh;
-
-    position: relative;
-    z-index: 8;
+  &__main-screen {
+    .background-screen {
+      position: absolute;
+      left: 0;
+      top: 0;
+      background-color: #000;
+      width: 100vw;
+      height: 100vh;
+      z-index: 10;
+      animation: startBackground 11s forwards ease-out;
+    }
+    .home__title-container {
+      overflow: hidden;
+      width: 0%;
+      animation: startTitle 6s forwards ease-in-out;
+      position: absolute;
+      height: 5.5rem;
+      text-wrap: nowrap;
+      z-index: 15;
+      left: 0;
+      top: 0;
+      bottom: 0;
+      margin: auto;
+      font-size: 3rem;
+      right: 0;
+      text-align: center;
+    }
     .title-text {
       position: absolute;
       background: linear-gradient(86deg, #01999c, #de9400, #fd4739);
@@ -89,6 +106,43 @@
       color: transparent;
       text-shadow: 0px 1px 5px #000;
     }
+    .home-recommendation {
+      position: absolute;
+      top: 55vh;
+      left: 0;
+      right: 0;
+      margin: auto;
+      animation: startText 10s forwards;
+      width: 100%;
+      text-align: center;
+      font-weight: 600;
+      z-index: 10;
+      &-icon {
+        display: flex;
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 5rem;
+        img {
+          width: 4rem;
+          height: 4rem;
+          margin: 0 2rem;
+        }
+      }
+      &-text {
+        font-size: 2rem;
+        color: #fff;
+      }
+    }
+  }
+
+  &__title {
+    font-size: 48px;
+    letter-spacing: 2px;
+    font-weight: 700;
+    margin-top: 9vh;
+    position: relative;
+    z-index: 8;
   }
   &__gallery {
     display: flex;
@@ -299,11 +353,53 @@
   }
 }
 
-// @keyframes sweep {
-//   0% {
-//     width: 0%;
-//   }
-//   100% {
-//     width: 100%;
-//   }
-// }
+@keyframes startTitle {
+  0% {
+    top: 0;
+    bottom: 0;
+    width: 0%;
+  }
+  40% {
+    top: 0;
+    bottom: 0;
+  }
+  60% {
+    width: 36%;
+  }
+  70% {
+    top: 0;
+    bottom: 0;
+  }
+  100% {
+    top: -70vh;
+    width: 36%;
+  }
+}
+@keyframes startText {
+  0% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 0;
+  }
+  70% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes startBackground {
+  0% {
+    opacity: 1;
+  }
+  80% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
