--- a/src/assets/styles/components/_orientationElement.scss
+++ b/src/assets/styles/components/_orientationElement.scss
@@ -10,6 +10,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  display: none;
   .orientation-text {
     color: #fff;
     font-size: 2rem;
