--- a/src/assets/styles/views/_home.scss
+++ b/src/assets/styles/views/_home.scss
@@ -122,7 +122,7 @@
         width: 100%;
         align-items: center;
         justify-content: center;
-        margin-bottom: 5rem;
+        margin-bottom: 4rem;
         img {
           width: 4rem;
           height: 4rem;
@@ -379,7 +379,7 @@
   0% {
     opacity: 0;
   }
-  40% {
+  45% {
     opacity: 0;
   }
   70% {
@@ -388,8 +388,12 @@
   90% {
     opacity: 1;
   }
+  99.9% {
+    display: block;
+  }
   100% {
     opacity: 0;
+    display: none;
   }
 }
 @keyframes startBackground {
@@ -399,7 +403,11 @@
   80% {
     opacity: 1;
   }
+  99.9% {
+    display: block;
+  }
   100% {
     opacity: 0;
+    display: none;
   }
 }
