--- a/src/assets/styles/views/_home.scss
+++ b/src/assets/styles/views/_home.scss
@@ -43,7 +43,6 @@
     height: 100vh;
     background-image: url('../../img/Pizarra.png');
     background-size: 100vw 100vh;
-    // animation: sweep linear 4s forwards;
 
     img {
       height: 100%;
@@ -60,11 +59,34 @@
     opacity: 0;
     background-size: 100vw 100vh;
     transition: opacity 0.3s ease;
-    // animation: sweep linear 4s forwards;
 
     img {
       height: 100%;
       width: 100%;
+    }
+  }
+  .init-secuence {
+    .background-screen {
+      animation: startBackground 8s forwards ease-out;
+    }
+    .home__title-container {
+      animation: startTitle 1.5s forwards ease-in-out;
+    }
+    .home-recommendation {
+      animation: startText 1.5s forwards ease-out, getOutText 1.5s 6.8s forwards;
+    }
+  }
+  .remove-element {
+    .home-recommendation {
+      animation: getOutText 1.5s forwards, jello-horizontal 1.5s forwards !important;
+    }
+  }
+  .render-sequence {
+    .home__title-container {
+      animation: swept 3s ease-in-out forwards;
+    }
+    .home-recommendation-icon {
+      animation: jello-horizontal 1.5s infinite;
     }
   }
   &__main-screen {
@@ -76,18 +98,16 @@
       width: 100vw;
       height: 100vh;
       z-index: 10;
-      animation: startBackground 11s forwards ease-out;
     }
     .home__title-container {
       overflow: hidden;
-      width: 0%;
-      animation: startTitle 6s forwards ease-in-out;
+      width: 36%;
       position: absolute;
       height: 5.5rem;
       text-wrap: nowrap;
       z-index: 15;
       left: 0;
-      top: 0;
+      top: -20vh;
       bottom: 0;
       margin: auto;
       font-size: 3rem;
@@ -108,21 +128,22 @@
     }
     .home-recommendation {
       position: absolute;
-      top: 55vh;
+      top: 50vh;
       left: 0;
       right: 0;
       margin: auto;
-      animation: startText 10s forwards;
       width: 100%;
       text-align: center;
       font-weight: 600;
       z-index: 10;
+      cursor: pointer;
+      animation: startText 5s forwards;
       &-icon {
         display: flex;
         width: 100%;
         align-items: center;
         justify-content: center;
-        margin-bottom: 4rem;
+        margin-bottom: 2rem;
         img {
           width: 4rem;
           height: 4rem;
@@ -166,7 +187,8 @@
     &-picture {
       flex-grow: 1;
       height: 100%;
-      width: 20vw;
+      margin: 0px 2rem;
+      max-width: 19vw;
       background: transparent;
       position: relative;
       transition: all 0.4s $cubic-bezier-small;
@@ -353,31 +375,36 @@
   }
 }
 
-@keyframes startTitle {
+@keyframes swept {
   0% {
-    top: 0;
     bottom: 0;
     width: 0%;
   }
-  40% {
-    top: 0;
-    bottom: 0;
-  }
-  60% {
+  100% {
     width: 36%;
   }
+}
+
+@keyframes startTitle {
+  0% {
+    bottom: 0;
+    top: -20vh;
+  }
+  40% {
+    bottom: 0;
+  }
   70% {
-    top: 0;
     bottom: 0;
   }
   100% {
     top: -70vh;
-    width: 36%;
   }
 }
 @keyframes startText {
   0% {
     opacity: 0;
+    top: 60vh;
+    scale: 0.8;
   }
   45% {
     opacity: 0;
@@ -388,12 +415,10 @@
   90% {
     opacity: 1;
   }
-  99.9% {
-    display: block;
-  }
   100% {
-    opacity: 0;
-    display: none;
+    top: 50vh;
+    scale: 1;
+    opacity: 1;
   }
 }
 @keyframes startBackground {
@@ -409,5 +434,38 @@
   100% {
     opacity: 0;
     display: none;
+  }
+}
+@keyframes jello-horizontal {
+  0% {
+    transform: scale3d(1, 1, 1);
+  }
+  15% {
+    transform: scale3d(0.95, 1.05, 1);
+  }
+  25% {
+    transform: scale3d(1.05, 0.95, 1);
+  }
+  40% {
+    transform: scale3d(0.95, 1.05, 1);
+  }
+  55% {
+    transform: scale3d(1.05, 0.95, 1);
+  }
+  70% {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+}
+@keyframes getOutText {
+  0% {
+    opacity: 1;
+    scale: 1;
+    top: 50vh;
+  }
+  100% {
+    opacity: 0;
+    top: 55vh;
+    scale: 0.8;
   }
 }
