feat: Add back button

--- a/src/assets/styles/views/_gallery-artist.scss
+++ b/src/assets/styles/views/_gallery-artist.scss
@@ -2,6 +2,19 @@
   min-height: 100vh;
   // overflow-y: auto;
   // overflow-x: hidden;
+  &__icon {
+    position: fixed;
+    z-index: 35;
+    left: 2vw;
+    top: 3vh;
+    cursor: pointer;
+
+    img {
+      width: 4rem;
+      height: 3rem;
+      cursor: pointer;
+    }
+  }
 }
 .gallery-artist {
   height: 100vh;
