--- a/src/assets/styles/views/_gallery-artist.scss
+++ b/src/assets/styles/views/_gallery-artist.scss
@@ -13,6 +13,7 @@
       width: 4rem;
       height: 3rem;
       cursor: pointer;
+      filter: drop-shadow(-1px 0px 0.5px #9b9b9b);
     }
   }
 }
