--- a/src/assets/styles/views/_home.scss
+++ b/src/assets/styles/views/_home.scss
@@ -95,7 +95,7 @@
       left: 0;
       top: 0;
       background-color: #000;
-      opacity: 0.8;
+      opacity: 0.9;
       width: 100vw;
       height: 100vh;
       z-index: 9;
@@ -114,6 +114,9 @@
       font-size: 3rem;
       right: 0;
       text-align: center;
+      @media screen and (max-width: 800px) {
+        font-size: 1.15rem;
+      }
     }
     .title-text {
       position: absolute;
@@ -236,7 +239,6 @@
       position: absolute;
       height: auto;
       width: 100vw;
-      // overflow: hidden;
       left: 0;
       top: 0;
       background-color: rgba(#000, 0);
@@ -277,10 +279,18 @@
     z-index: 6;
     color: #fff;
     letter-spacing: 2px;
-    font-size: 24px;
+    font-size: 2rem;
     font-weight: 600;
     margin-top: 12vh;
     text-shadow: 0px 1px 5px #000;
+    transition: all 0.6s;
+    &:hover {
+      scale: 1.05;
+    }
+    @media screen and (max-width: 800px) {
+      margin-bottom: 2vh;
+      font-size: 1rem;
+    }
   }
   &__content {
     height: 50%;
@@ -348,6 +358,29 @@
     top: -80vh;
   }
 }
+@media screen and (max-width: 800px) {
+  @keyframes startText {
+    0% {
+      opacity: 0;
+      top: 60vh;
+      scale: 0.8;
+    }
+    45% {
+      opacity: 0;
+    }
+    70% {
+      opacity: 1;
+    }
+    90% {
+      opacity: 1;
+    }
+    100% {
+      top: 40vh;
+      scale: 1;
+      opacity: 1;
+    }
+  }
+}
 @keyframes startText {
   0% {
     opacity: 0;
@@ -371,10 +404,10 @@
 }
 @keyframes startBackground {
   0% {
-    opacity: 1;
+    opacity: 0.9;
   }
   80% {
-    opacity: 1;
+    opacity: 0.9;
   }
   99.9% {
     display: block;
