--- a/src/assets/styles/views/_skate_scenes.scss
+++ b/src/assets/styles/views/_skate_scenes.scss
@@ -203,7 +203,7 @@
       top: -10vh;
       left: -20vw;
       .ambulance {
-        width: 150vw;
+        width: 160vw;
         height: 150vh;
       }
     }
@@ -362,11 +362,62 @@
         left: 80vw;
       }
       .photo {
-        width: 10vw;
-        height: 25vh;
+        width: 12vw;
+        height: 28vh;
         margin: 16px 0;
+        position: absolute;
+        left: 5vw;
+        opacity: 0;
+        scale: 0.8;
+
+        .content {
+          left: 5%;
+          top: 5%;
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          z-index: 10;
+        }
+        .marco {
+          position: absolute;
+          width: 110%;
+          height: 110%;
+          z-index: 15;
+        }
+      }
+      .photo-3 {
+        left: 20vw;
+        top: 0vh;
+        rotate: -10deg;
+        z-index: 25;
+      }
+      .photo-2 {
+        left: 8vw;
+        top: 15vh;
+        rotate: -55deg;
       }
       .photo-1 {
+        left: 13vw;
+        top: 5vh;
+        rotate: -35deg;
+        z-index: 20;
+      }
+      .photo-4 {
+        left: -25vw;
+        top: 0vh;
+        rotate: 10deg;
+        z-index: 25;
+      }
+      .photo-5 {
+        left: -13vw;
+        top: 15vh;
+        rotate: 55deg;
+      }
+      .photo-6 {
+        left: -18vw;
+        top: 5vh;
+        rotate: 35deg;
+        z-index: 20;
       }
     }
     .text {
@@ -384,8 +435,26 @@
       opacity: 0;
       scale: 0.9;
     }
-    .trigger-six-text {
-      @include trigger(rgb(25, 0, 255), 60vh);
+    .trigger-text {
+      @include trigger(rgb(25, 0, 255), 250vh);
+    }
+    .trigger-photo-1 {
+      @include trigger(rgb(25, 0, 255), 50vh);
+    }
+    .trigger-photo-2 {
+      @include trigger(rgb(25, 0, 255), 0vh);
+    }
+    .trigger-photo-3 {
+      @include trigger(rgb(25, 0, 255), 100vh);
+    }
+    .trigger-photo-4 {
+      @include trigger(rgb(25, 0, 255), 250vh);
+    }
+    .trigger-photo-5 {
+      @include trigger(rgb(25, 0, 255), 200vh);
+    }
+    .trigger-photo-6 {
+      @include trigger(rgb(25, 0, 255), 150vh);
     }
   }
 }
