fix: Solve flex-start rule

--- a/src/assets/styles/views/_home.scss
+++ b/src/assets/styles/views/_home.scss
@@ -92,7 +92,7 @@
         height: 100%;
         display: flex;
         justify-content: center;
-        align-items: start;
+        align-items: flex-start;
       }
     }
 
@@ -217,7 +217,7 @@
   margin-top: 4vh;
   display: flex;
   flex-direction: row;
-  align-items: start;
+  align-items: flex-start;
   justify-content: center;
   width: 100%;
   margin-left: 1rem;
