fix: Solve error about counter and mask handler

--- a/src/assets/styles/views/_project.scss
+++ b/src/assets/styles/views/_project.scss
@@ -23,6 +23,7 @@
     font-size: 1.5rem;
     letter-spacing: 1px;
     line-height: 2.5rem;
-    font-weight: 600;
+    font-weight: 500;
+    font-family: $font-family-3 !important;
   }
 }
