--- a/src/assets/styles/views/_teamwork.scss
+++ b/src/assets/styles/views/_teamwork.scss
@@ -25,11 +25,14 @@
   }
   &__item {
     max-width: 100vw;
-    height: 29vh;
+    height: 27vh;
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
     padding: 1rem 0rem;
+    * {
+      font-family: $font-family-3 !important;
+    }
 
     &:nth-last-child(1) {
       border-top: 1px solid #4e4e4e;
@@ -96,15 +99,22 @@
     }
   }
 }
+
 .team-work__item:nth-last-child(3) {
   .team-work__item-image {
-    min-width: 18%;
+    min-width: 14%;
   }
 }
 .team-work__item:nth-last-child(2) {
   .team-work__item-image {
-    min-width: 13%;
-    width: 13%;
+    min-width: 14%;
+    width: 14%;
+  }
+}
+.team-work__item:nth-last-child(1) {
+  .team-work__item-image {
+    min-width: 14%;
+    width: 14%;
   }
 }
 .team-work__arrow {
