--- a/src/assets/styles/views/_project.scss
+++ b/src/assets/styles/views/_project.scss
@@ -12,18 +12,31 @@
     align-items: center;
     justify-content: center;
     padding: 2rem 8rem;
+    &-text {
+      width: 80%;
+      max-height: 50vh;
+      overflow-y: scroll;
+      border: 2px solid #666666;
+      padding: 0 2rem;
+      border-radius: 8px;
+      span {
+        display: block;
+        margin: 2rem 0px;
+      }
+    }
   }
 
   &__image {
     min-height: 55vh;
     min-width: 30vw;
     margin-left: 3rem;
+    margin-top: -5.5rem;
   }
   &__text {
     font-size: 1.5rem;
     letter-spacing: 1px;
     line-height: 2.5rem;
-    font-weight: 500;
+    font-weight: 600;
     font-family: $font-family-3 !important;
   }
 }
