--- a/src/assets/styles/_layout.scss
+++ b/src/assets/styles/_layout.scss
@@ -2,3 +2,34 @@
   width: 100vw;
   height: 100vh;
 }
+.control__background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 4;
+  width: 100vw;
+  height: 100vh;
+  background-image: url('../img/Pizarra.png');
+  background-size: 100vw 100vh;
+
+  img {
+    height: 100%;
+    width: 100%;
+  }
+}
+.control__mask {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 5;
+  width: 100vw;
+  height: 100vh;
+  opacity: 0;
+  background-size: 100vw 100vh;
+  transition: opacity 0.3s ease;
+
+  img {
+    height: 100%;
+    width: 100%;
+  }
+}
