--- a/src/assets/styles/_reset.scss
+++ b/src/assets/styles/_reset.scss
@@ -41,4 +41,20 @@ html {
   width: 4rem;
   height: 3rem;
   position: fixed;
+  z-index: 15;
+}
+@media screen and (max-width: 1024px) {
+  html {
+    font-size: 8.4px;
+  }
+}
+@media screen and (max-width: 1600px) {
+  html {
+    font-size: 13px;
+  }
+}
+@media screen and (min-width: 2560px) {
+  html {
+    font-size: 13px;
+  }
 }
