--- a/src/assets/styles/views/_project.scss
+++ b/src/assets/styles/views/_project.scss
@@ -1,6 +1,8 @@
 .project {
   width: 100vw;
   height: 100vh;
+  position: relative;
+  z-index: 10;
   .team-work__title {
     position: relative;
     top: 10vh;
@@ -38,5 +40,8 @@
     line-height: 2.5rem;
     font-weight: 600;
     font-family: $font-family-3 !important;
+    color: #fff;
+    font-weight: 600;
+    text-shadow: 0px 1px 5px #000;
   }
 }
