--- a/src/assets/styles/views/_teamwork.scss
+++ b/src/assets/styles/views/_teamwork.scss
@@ -1,6 +1,8 @@
 .team-work {
   height: 100vh;
   padding: 2rem 6rem;
+  position: relative;
+  z-index: 10;
 
   &__title {
     width: 100%;
@@ -30,6 +32,7 @@
     justify-content: flex-start;
     align-items: flex-start;
     padding: 1rem 0rem;
+
     * {
       font-family: $font-family-3 !important;
     }
@@ -73,6 +76,10 @@
     }
     &-text {
       margin-top: 2rem;
+
+      color: #fff;
+      font-weight: 600;
+      text-shadow: 0px 1px 5px #000;
       span {
         font-size: 1.4rem;
         letter-spacing: 1px;
@@ -88,14 +95,16 @@
       left: 1vw;
       right: 0;
       top: 20vh;
+      min-width: 17vw;
       z-index: 5;
       margin: auto;
       color: #fff;
       text-shadow: 0px 1px 5px #000;
-      text-align: center;
+      text-align: left;
       cursor: auto;
       transition: all 0.8s;
       letter-spacing: 1px;
+      font-weight: 700;
     }
   }
 }
@@ -126,6 +135,7 @@
   margin: auto;
   cursor: pointer;
   transition: all 0.5s;
+  z-index: 15;
   img {
     height: 100%;
     width: 100%;
