feat: Add rem interactions

--- a/src/assets/styles/components/_scrolled.scss
+++ b/src/assets/styles/components/_scrolled.scss
@@ -21,9 +21,9 @@
     width: 100%;
     text-align: center;
     color: #fff;
-    font-size: 24px;
+    font-size: 3rem;
     font-weight: 600;
-    margin-bottom: 68px;
+    margin-bottom: 8vh;
     animation: jello-horizontal 1.4s infinite both;
     &__icon {
       margin: 0px 8px;
