--- a/src/assets/styles/_helpers.scss
+++ b/src/assets/styles/_helpers.scss
@@ -22,7 +22,7 @@
 @mixin titleScene($left, $top, $content: '') {
   left: $left;
   top: $top;
-  font-size: 128px;
+  font-size: 7.5rem;
   font-weight: 600;
   color: $color-black-notation;
   font-family: $font-family-7;
@@ -42,14 +42,14 @@
   }
   &::after {
     content: '';
-    width: 270px;
+    width: 20vw;
     display: block;
     box-shadow: 0px 1px 5px #000;
     background: linear-gradient(86deg, #01999c, #de9400);
-    height: 6px;
+    height: 0.8vh;
     position: absolute;
-    top: 16vh;
-    left: 10px;
+    top: 15vh;
+    left: 0.8vw;
     border-radius: 2px;
   }
   &::before {
@@ -57,9 +57,9 @@
     position: absolute;
     font-family: $font-family-7;
     color: #fff;
-    top: 17vh;
-    left: 12px;
-    font-size: 36px;
+    top: 16vh;
+    left: 0.8vw;
+    font-size: 2.3rem;
     text-shadow: 0px 0.5px 3px #000;
   }
 }
