--- a/src/assets/styles/views/_skate_scenes.scss
+++ b/src/assets/styles/views/_skate_scenes.scss
@@ -36,8 +36,8 @@
         width: 100%;
       }
       .text {
-        letter-spacing: 4px;
-        font-size: 28px;
+        letter-spacing: 0.2rem;
+        font-size: 1.9rem;
         color: $color-black-notation;
         font-family: $font-family-quote;
         position: absolute;
@@ -94,13 +94,13 @@
       position: relative;
       &-title {
         position: absolute;
-        letter-spacing: 4px;
-        font-size: 48px;
+        letter-spacing: 0.4rem;
+        font-size: 2.5rem;
         font-weight: 600;
         color: $color-black-notation;
         font-family: $font-family-quote;
         top: 15vh;
-        left: -40px;
+        left: -0.8vw;
         text-align: center;
         width: 100%;
         z-index: 20;
@@ -312,13 +312,13 @@
     }
 
     .message {
-      font-size: 28px;
+      font-size: 2rem;
+      left: 77vw;
+      top: -10vh;
       color: #272727;
       position: relative;
       rotate: -14deg;
       transform-origin: top;
-      left: 75vw;
-      top: -6vh;
       z-index: 25;
       display: flex;
       flex-direction: column;
